Fix block types select width and overflowing form width in Firefox (#5403)
* Set higher types field with

Set the width of the types select field to 150px to also show longer block names

* Use min-width for width of type select of block

* Fix problem in firefox with long field content

* Fix form renderer problem in firefox

--- a/src/Sulu/Bundle/AdminBundle/Resources/js/components/Block/block.scss
+++ b/src/Sulu/Bundle/AdminBundle/Resources/js/components/Block/block.scss
@@ -47,7 +47,7 @@ $blockHandleWidth: 20px;
 }
 
 .types {
-    width: 120px;
+    min-width: 120px;
 }
 
 .icons {
